@@ -128,6 +128,8 @@ if (project.ext.forceBootifulArtifact || (!rootProject.publishFlag && !rootProje
         list.add("--add-opens")
         list.add("java.base/java.util.concurrent=ALL-UNNAMED")
         list.add("--add-opens")
+        list.add("java.base/java.util.regex=ALL-UNNAMED")
+        list.add("--add-opens")
         list.add("java.base/java.util.concurrent.locks=ALL-UNNAMED")
         list.add("--add-opens")
         list.add("java.base/java.util=ALL-UNNAMED")
